Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83040

tst_QWebEnginePage::comboBoxPopupPositionAfterChildMove test crashes or asserts on exit in debug mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.0 Beta4
    • 5.15
    • WebEngine
    • None
    • Linux/X11, Windows
    • d1b4f4c72 (134-based-refactor)

      Most of the time I get assert. It also crashes or passes sometimes. It works well for me in release.

      Assert occurs when mojo::Remote<mojom::FrameSinkManager> frame_sink_manager_remote_ is nullptr in viz::HostFrameSinkManager::CreateRootCompositorFrameSink():

      [5856:5856:0323/114203.666264:FATAL:host_frame_sink_manager.cc(152)] Check failed: frame_sink_manager_remote_.
      #0 0x7f63bcaac711 base::debug::CollectStackTrace()
      #1 0x7f63bc8829b7 base::debug::StackTrace::StackTrace()
      #2 0x7f63bc88296e base::debug::StackTrace::StackTrace()
      #3 0x7f63bc8bb6de logging::LogMessage::~LogMessage()
      #4 0x7f63beef317d viz::HostFrameSinkManager::CreateRootCompositorFrameSink()
      #5 0x7f63bbb75c2f ui::HostContextFactoryPrivate::ConfigureCompositor()
      #6 0x7f63c24b457a content::VizProcessTransportFactory::OnEstablishedGpuChannel()
      #7 0x7f63c24b6ecb base::internal::FunctorTraits<>::Invoke<>()
      #8 0x7f63c24b6a86 base::internal::InvokeHelper<>::MakeItSo<>()
      #9 0x7f63c24b6594 _ZN4base8internal7InvokerINS0_9BindStateIMN7content26VizProcessTransportFactoryEFvNS_7WeakPtrIN2ui10CompositorEEE13scoped_refptrIN3gpu14GpuChannelHostEEEJNS5_IS4_EES8_EEEFvSC_EE7RunImplISE_St5tupleIJSF_S8_EEJLm0ELm1EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOSC_
      #10 0x7f63c24b5e95 base::internal::Invoker<>::RunOnce()
      #11 0x7f63bb255d79 _ZNO4base12OnceCallbackIFv13scoped_refptrIN3gpu14GpuChannelHostEEEE3RunES4_
      #12 0x7f63c1d93280 content::BrowserGpuChannelHostFactory::EstablishGpuChannel()
      #13 0x7f63c24b3ada content::VizProcessTransportFactory::CreateLayerTreeFrameSink()
      #14 0x7f63beb8e3e6 ui::Compositor::RequestNewLayerTreeFrameSink()
      #15 0x7f63bed43c5d cc::LayerTreeHost::RequestNewLayerTreeFrameSink()
      #16 0x7f63bee3696c cc::SingleThreadProxy::RequestNewLayerTreeFrameSink()
      #17 0x7f63bee3f1d5 base::internal::FunctorTraits<>::Invoke<>()
      #18 0x7f63bee3ee06 base::internal::InvokeHelper<>::MakeItSo<>()
      #19 0x7f63bee3e641 _ZN4base8internal7InvokerINS0_9BindStateIMN2cc17SingleThreadProxyEFvvEJNS_7WeakPtrIS4_EEEEEFvvEE7RunImplIS6_St5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #20 0x7f63bee3e205 base::internal::Invoker<>::RunOnce()
      #21 0x7f63b6eecaae _ZNO4base12OnceCallbackIFvvEE3RunEv
      #22 0x7f63bb6d6d94 base::internal::CancelableCallbackImpl<>::ForwardOnce<>()
      #23 0x7f63bb6de4cb base::internal::FunctorTraits<>::Invoke<>()
      #24 0x7f63bb6dd9ad base::internal::InvokeHelper<>::MakeItSo<>()
      #25 0x7f63bb6dbd3a _ZN4base8internal7InvokerINS0_9BindStateIMNS0_22CancelableCallbackImplINS_12OnceCallbackIFvvEEEEEFvvEJNS_7WeakPtrIS7_EEEEES5_E7RunImplIS9_St5tupleIJSB_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #26 0x7f63bb6d958f base::internal::Invoker<>::RunOnce()
      #27 0x7f63b6eecaae _ZNO4base12OnceCallbackIFvvEE3RunEv
      #28 0x7f63bc9802bf base::TaskAnnotator::RunTask()
      #29 0x7f63bc9d1e9d base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl()
      #30 0x7f63bc9d164b base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork()
      #31 0x7f63b708ed29 QtWebEngineCore::WebEngineContext::destroy()
      #32 0x7f63b708f2fa QtWebEngineCore::WebEngineContext::destroyContextPostRoutine()
      #33 0x7f63b404e72b qt_call_post_routines()
      #34 0x7f63b52a6c15 QApplication::~QApplication()
      #35 0x55ae1085d21d main
      #36 0x7f63b3341b97 __libc_start_main
      #37 0x55ae107d33ea _start
      Task trace:
      #0 0x7f63bee3ab57 cc::SingleThreadProxy::ScheduleRequestNewLayerTreeFrameSink()
      #1 0x7f63becc1b19 cc::Scheduler::ScheduleBeginImplFrameDeadline()
      #2 0x7f63bd28badc mojo::Connector::ReadAllAvailableMessages()
      #3 0x7f63bd2e9e6a mojo::SimpleWatcher::Context::Notify()
      #4 0x7f63bd2e9e6a mojo::SimpleWatcher::Context::Notify()
      IPC message handler context: 0x866BCEA6
       
      Received signal 6
      #0 0x7f63bcaac711 base::debug::CollectStackTrace()
      #1 0x7f63bc8829b7 base::debug::StackTrace::StackTrace()
      #2 0x7f63bc88296e base::debug::StackTrace::StackTrace()
      #3 0x7f63bcaab2d5 base::debug::(anonymous namespace)::StackDumpSignalHandler()
      #4 0x7f63b335ef20 <unknown>
      #5 0x7f63b335ee97 gsignal
      #6 0x7f63b3360801 abort
      #7 0x7f63bcaaaa3c base::debug::(anonymous namespace)::DebugBreak()
      #8 0x7f63bcaaaa55 base::debug::BreakDebugger()
      #9 0x7f63bc8bbdc1 logging::LogMessage::~LogMessage()
      #10 0x7f63beef317d viz::HostFrameSinkManager::CreateRootCompositorFrameSink()
      #11 0x7f63bbb75c2f ui::HostContextFactoryPrivate::ConfigureCompositor()
      #12 0x7f63c24b457a content::VizProcessTransportFactory::OnEstablishedGpuChannel()
      #13 0x7f63c24b6ecb base::internal::FunctorTraits<>::Invoke<>()
      #14 0x7f63c24b6a86 base::internal::InvokeHelper<>::MakeItSo<>()
      #15 0x7f63c24b6594 _ZN4base8internal7InvokerINS0_9BindStateIMN7content26VizProcessTransportFactoryEFvNS_7WeakPtrIN2ui10CompositorEEE13scoped_refptrIN3gpu14GpuChannelHostEEEJNS5_IS4_EES8_EEEFvSC_EE7RunImplISE_St5tupleIJSF_S8_EEJLm0ELm1EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOSC_
      #16 0x7f63c24b5e95 base::internal::Invoker<>::RunOnce()
      #17 0x7f63bb255d79 _ZNO4base12OnceCallbackIFv13scoped_refptrIN3gpu14GpuChannelHostEEEE3RunES4_
      #18 0x7f63c1d93280 content::BrowserGpuChannelHostFactory::EstablishGpuChannel()
      #19 0x7f63c24b3ada content::VizProcessTransportFactory::CreateLayerTreeFrameSink()
      #20 0x7f63beb8e3e6 ui::Compositor::RequestNewLayerTreeFrameSink()
      #21 0x7f63bed43c5d cc::LayerTreeHost::RequestNewLayerTreeFrameSink()
      #22 0x7f63bee3696c cc::SingleThreadProxy::RequestNewLayerTreeFrameSink()
      #23 0x7f63bee3f1d5 base::internal::FunctorTraits<>::Invoke<>()
      #24 0x7f63bee3ee06 base::internal::InvokeHelper<>::MakeItSo<>()
      #25 0x7f63bee3e641 _ZN4base8internal7InvokerINS0_9BindStateIMN2cc17SingleThreadProxyEFvvEJNS_7WeakPtrIS4_EEEEEFvvEE7RunImplIS6_St5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #26 0x7f63bee3e205 base::internal::Invoker<>::RunOnce()
      #27 0x7f63b6eecaae _ZNO4base12OnceCallbackIFvvEE3RunEv
      #28 0x7f63bb6d6d94 base::internal::CancelableCallbackImpl<>::ForwardOnce<>()
      #29 0x7f63bb6de4cb base::internal::FunctorTraits<>::Invoke<>()
      #30 0x7f63bb6dd9ad base::internal::InvokeHelper<>::MakeItSo<>()
      #31 0x7f63bb6dbd3a _ZN4base8internal7InvokerINS0_9BindStateIMNS0_22CancelableCallbackImplINS_12OnceCallbackIFvvEEEEEFvvEJNS_7WeakPtrIS7_EEEEES5_E7RunImplIS9_St5tupleIJSB_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #32 0x7f63bb6d958f base::internal::Invoker<>::RunOnce()
      #33 0x7f63b6eecaae _ZNO4base12OnceCallbackIFvvEE3RunEv
      #34 0x7f63bc9802bf base::TaskAnnotator::RunTask()
      #35 0x7f63bc9d1e9d base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl()
      #36 0x7f63bc9d164b base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork()
      #37 0x7f63b708ed29 QtWebEngineCore::WebEngineContext::destroy()
      #38 0x7f63b708f2fa QtWebEngineCore::WebEngineContext::destroyContextPostRoutine()
      #39 0x7f63b404e72b qt_call_post_routines()
      #40 0x7f63b52a6c15 QApplication::~QApplication()
      #41 0x55ae1085d21d main
      #42 0x7f63b3341b97 __libc_start_main
      #43 0x55ae107d33ea _start
        r8: 0000000000000000  r9: 00007ffd0ab66900 r10: 0000000000000008 r11: 0000000000000246
       r12: 0000000000000d4b r13: 00007ffd0ab68568 r14: 0000000000000000 r15: 0000000000000000
        di: 0000000000000002  si: 00007ffd0ab66900  bp: 00007ffd0ab66b50  bx: 0000000000000400
        dx: 0000000000000000  ax: 0000000000000000  cx: 00007f63b335ee97  sp: 00007ffd0ab66900
        ip: 00007f63b335ee97 efl: 0000000000000246 cgf: 002b000000000033 erf: 0000000000000000
       trp: 0000000000000000 msk: 0000000000000000 cr2: 0000000000000000
      [end of stack trace]
      Calling _exit(1). Core file will not be generated
      

       

      Crash occurs when mojom::FrameSinkManager* frame_sink_manager_ is nullptr in viz::HostFrameSinkManager::CreateCompositorFrameSink():

      Received signal 11 SEGV_MAPERR 000000000000
      #0 0x7f78eb736711 base::debug::CollectStackTrace()
      #1 0x7f78eb50c9b7 base::debug::StackTrace::StackTrace()
      #2 0x7f78eb50c96e base::debug::StackTrace::StackTrace()
      #3 0x7f78eb7352d5 base::debug::(anonymous namespace)::StackDumpSignalHandler()
      #4 0x7f78e1fe8f20 <unknown>
      #5 0x7f78edb7d5ad viz::HostFrameSinkManager::CreateCompositorFrameSink()
      #6 0x7f78f0cc8028 _ZZN7content20RenderWidgetHostImpl26RequestCompositorFrameSinkEN4mojo15PendingReceiverIN3viz5mojom19CompositorFrameSinkEEENS1_13PendingRemoteINS4_25CompositorFrameSinkClientEEEENKUlPNS3_20HostFrameSinkManagerES6_S9_RKNS3_11FrameSinkIdEE_clESB_S6_S9_SE_
      #7 0x7f78f0ccaa3d _ZN4base8internal13FunctorTraitsIZN7content20RenderWidgetHostImpl26RequestCompositorFrameSinkEN4mojo15PendingReceiverIN3viz5mojom19CompositorFrameSinkEEENS4_13PendingRemoteINS7_25CompositorFrameSinkClientEEEEUlPNS6_20HostFrameSinkManagerES9_SC_RKNS6_11FrameSinkIdEE_vE6InvokeISI_JSE_S9_SC_SH_EEEvOT_DpOT0_
      #8 0x7f78f0cca87b _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIZN7content20RenderWidgetHostImpl26RequestCompositorFrameSinkEN4mojo15PendingReceiverIN3viz5mojom19CompositorFrameSinkEEENS6_13PendingRemoteINS9_25CompositorFrameSinkClientEEEEUlPNS8_20HostFrameSinkManagerESB_SE_RKNS8_11FrameSinkIdEE_JSG_SB_SE_SJ_EEEvOT_DpOT0_
      #9 0x7f78f0cca5a8 _ZN4base8internal7InvokerINS0_9BindStateIZN7content20RenderWidgetHostImpl26RequestCompositorFrameSinkEN4mojo15PendingReceiverIN3viz5mojom19CompositorFrameSinkEEENS5_13PendingRemoteINS8_25CompositorFrameSinkClientEEEEUlPNS7_20HostFrameSinkManagerESA_SD_RKNS7_11FrameSinkIdEE_JNS0_17UnretainedWrapperISE_EESA_SD_EEEFvSI_EE7RunImplISJ_St5tupleIJSL_SA_SD_EEJLm0ELm1ELm2EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEESI_
      #10 0x7f78f0cca1f8 _ZN4base8internal7InvokerINS0_9BindStateIZN7content20RenderWidgetHostImpl26RequestCompositorFrameSinkEN4mojo15PendingReceiverIN3viz5mojom19CompositorFrameSinkEEENS5_13PendingRemoteINS8_25CompositorFrameSinkClientEEEEUlPNS7_20HostFrameSinkManagerESA_SD_RKNS7_11FrameSinkIdEE_JNS0_17UnretainedWrapperISE_EESA_SD_EEEFvSI_EE7RunOnceEPNS0_13BindStateBaseESI_
      #11 0x7f78f0ccca85 _ZNO4base12OnceCallbackIFvRKN3viz11FrameSinkIdEEE3RunES4_
      #12 0x7f78f0cc812a content::RenderWidgetHostImpl::RequestCompositorFrameSink()
      #13 0x7f78f17e4e7c content::FrameSinkProviderImpl::CreateForWidget()
      #14 0x7f78e6a2de97 content::mojom::FrameSinkProviderStubDispatch::Accept()
      #15 0x7f78f17e5a0f content::mojom::FrameSinkProviderStub<>::Accept()
      #16 0x7f78ebf22a9d mojo::InterfaceEndpointClient::HandleValidatedMessage()
      #17 0x7f78ebf20013 mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept()
      #18 0x7f78ebf2b37e mojo::MessageDispatcher::Accept()
      #19 0x7f78ebf219fe mojo::InterfaceEndpointClient::HandleIncomingMessage()
      #20 0x7f78ebf2f219 mojo::internal::MultiplexRouter::ProcessIncomingMessage()
      #21 0x7f78ebf2da45 mojo::internal::MultiplexRouter::Accept()
      #22 0x7f78ebf2b37e mojo::MessageDispatcher::Accept()
      #23 0x7f78ebf153d9 mojo::Connector::DispatchMessage()
      #24 0x7f78ebf159bc mojo::Connector::ReadAllAvailableMessages()
      #25 0x7f78ebf1477f mojo::Connector::OnHandleReadyInternal()
      #26 0x7f78ebf1448c mojo::Connector::OnWatcherHandleReady()
      #27 0x7f78ebf1b149 base::internal::FunctorTraits<>::Invoke<>()
      #28 0x7f78ebf1a657 base::internal::InvokeHelper<>::MakeItSo<>()
      #29 0x7f78ebf19b80 _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE7RunImplIRKS6_RKSt5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOj
      #30 0x7f78ebf18cee base::internal::Invoker<>::Run()
      #31 0x7f78e5c06be2 _ZNKR4base17RepeatingCallbackIFvjEE3RunEj
      #32 0x7f78e7e7ef49 mojo::SimpleWatcher::DiscardReadyState()
      #33 0x7f78e7e8a95d base::internal::FunctorTraits<>::Invoke<>()
      #34 0x7f78e7e89af4 base::internal::InvokeHelper<>::MakeItSo<>()
      #35 0x7f78e7e880f9 _ZN4base8internal7InvokerINS0_9BindStateIPFvRKNS_17RepeatingCallbackIFvjEEEjRKN4mojo18HandleSignalsStateEEJS5_EEEFvjSB_EE7RunImplIRKSD_RKSt5tupleIJS5_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOjSB_
      #36 0x7f78e7e8572a base::internal::Invoker<>::Run()
      #37 0x7f78ebf748e2 _ZNKR4base17RepeatingCallbackIFvjRKN4mojo18HandleSignalsStateEEE3RunEjS4_
      #38 0x7f78ebf73770 mojo::SimpleWatcher::OnHandleReady()
      #39 0x7f78ebf756df base::internal::FunctorTraits<>::Invoke<>()
      #40 0x7f78ebf75468 base::internal::InvokeHelper<>::MakeItSo<>()
      #41 0x7f78ebf74f73 _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo13SimpleWatcherEFvijRKNS3_18HandleSignalsStateEEJNS_7WeakPtrIS4_EEijS5_EEEFvvEE7RunImplIS9_St5tupleIJSB_ijS5_EEJLm0ELm1ELm2ELm3EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      #42 0x7f78ebf74a0a base::internal::Invoker<>::RunOnce()
      #43 0x7f78e5b76aae _ZNO4base12OnceCallbackIFvvEE3RunEv
      #44 0x7f78eb60a2bf base::TaskAnnotator::RunTask()
      #45 0x7f78eb65be9d base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl()
      #46 0x7f78eb65b64b base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork()
      #47 0x7f78e5d18d29 QtWebEngineCore::WebEngineContext::destroy()
      #48 0x7f78e5d192fa QtWebEngineCore::WebEngineContext::destroyContextPostRoutine()
      #49 0x7f78e2cd872b qt_call_post_routines()
      #50 0x7f78e3f30c15 QApplication::~QApplication()
      #51 0x5569eac4f21d main
      #52 0x7f78e1fcbb97 __libc_start_main
      #53 0x5569eabc53ea _start
        r8: 0000000000000000  r9: 00007ffd7744da38 r10: 00007f78fa5d90f0 r11: 0000000000000000
       r12: 0000000000000000 r13: 00005569eb75ece8 r14: 00005569ee24c1b8 r15: 0000000000000000
        di: 0000000000000000  si: 00007f78e23978b0  bp: 00007ffd7744df60  bx: 0000000000000000
        dx: 0000000000000051  ax: 0000000000000000  cx: 00007f78e20ba187  sp: 00007ffd7744dd50
        ip: 00007f78edb7d5ad efl: 0000000000010206 cgf: 002b000000000033 erf: 0000000000000004
       trp: 000000000000000e msk: 0000000000000000 cr2: 0000000000000000
      [end of stack trace]
      Calling _exit(1). Core file will not be generated.
      

        For Gerrit Dashboard: QTBUG-83040
        # Subject Branch Project Status CR V

            michal Michal Klocek
            ztamas Tamas Zakor
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes