Fix viz crash when cleanup

When we cleanup viz, OnConnectionLost will delete frame_sink_manger.
However we can still have messages to create sinks and to invalidate them
later when destroying compositor.

Do not create new frame sink, and do not invalidate them later.

Make possible to bail out in viz process transport factory as
compositor was already deleted.

Task-number: QTBUG-83040
Task-number: QTBUG-79864
Change-Id: Ibf0606368dfd81bc376a06721ada8d13cd8ea417
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>