chromium/components/viz/host/host_frame_sink_manager.cc
@@ -115,8 +115,8 @@ void HostFrameSinkManager::InvalidateFrameSinkId(
     // HostFrameSinkManager has been mutated. |data| might not be a valid
     // reference at this point.
   }
-
-  frame_sink_manager_->InvalidateFrameSinkId(frame_sink_id);
+  if (frame_sink_manager_)
+    frame_sink_manager_->InvalidateFrameSinkId(frame_sink_id);
 }
 
 void HostFrameSinkManager::EnableSynchronizationReporting(
@@ -147,7 +147,7 @@ void HostFrameSinkManager::SetFrameSinkDebugLabel(
 void HostFrameSinkManager::CreateRootCompositorFrameSink(
     mojom::RootCompositorFrameSinkParamsPtr params) {
   // Should only be used with an out-of-process display compositor.
-  DCHECK(frame_sink_manager_remote_);
+  DCHECK(frame_sink_manager_remote_ || !frame_sink_manager_);
 
   FrameSinkId frame_sink_id = params->frame_sink_id;
   FrameSinkData& data = frame_sink_data_map_[frame_sink_id];
@@ -160,10 +160,11 @@ void HostFrameSinkManager::CreateRootCompositorFrameSink(
                                                     base::DoNothing());
   }
 
-  data.is_root = true;
-  data.has_created_compositor_frame_sink = true;
-
-  frame_sink_manager_->CreateRootCompositorFrameSink(std::move(params));
+  if (frame_sink_manager_) {
+     data.is_root = true;
+     data.has_created_compositor_frame_sink = true;
+     frame_sink_manager_->CreateRootCompositorFrameSink(std::move(params));
+  }
   display_hit_test_query_[frame_sink_id] = std::make_unique<HitTestQuery>();
 }
 
@@ -181,11 +182,12 @@ void HostFrameSinkManager::CreateCompositorFrameSink(
                                                     base::DoNothing());
   }
 
-  data.is_root = false;
-  data.has_created_compositor_frame_sink = true;
-
-  frame_sink_manager_->CreateCompositorFrameSink(
+  if (frame_sink_manager_) {
+    data.is_root = false;
+    data.has_created_compositor_frame_sink = true;
+    frame_sink_manager_->CreateCompositorFrameSink(
       frame_sink_id, std::move(receiver), std::move(client));
+  }
 }
 
 void HostFrameSinkManager::OnFrameTokenChanged(const FrameSinkId& frame_sink_id,
