chromium/content/browser/compositor/viz_process_transport_factory.h
@@ -57,6 +57,7 @@ class VizProcessTransportFactory : public ui::ContextFactory,
 
   // Connects HostFrameSinkManager to FrameSinkManagerImpl in viz process.
   void ConnectHostFrameSinkManager();
+  void PrepareForShutDown();
 
   // ui::ContextFactory implementation.
   void CreateLayerTreeFrameSink(
@@ -135,7 +136,7 @@ class VizProcessTransportFactory : public ui::ContextFactory,
   ui::HostContextFactoryPrivate context_factory_private_;
 
   base::WeakPtrFactory<VizProcessTransportFactory> weak_ptr_factory_{this};
-
+  bool shutdown_ = false;
   DISALLOW_COPY_AND_ASSIGN(VizProcessTransportFactory);
 };
 
